fixed a merge issue

--- a/paper/firstwords.tex
+++ b/paper/firstwords.tex
@@ -1,5 +1,4 @@
 \documentclass[10pt,letterpaper]{article}
-
 \usepackage{hyperref}
 \usepackage{cogsci}
 \usepackage[nodoi]{apacite}
@@ -12,12 +11,8 @@
 \usepackage[english]{babel}
 \usepackage{array}
 \usepackage{pbox}
-% \usepackage{soul}
 \usepackage[usenames,dvipsnames]{xcolor}
 \usepackage[section]{placeins}
-
-% \newcommand{\hlc}[2][yellow]{ {\sethlcolor{#1} \hl{#2}} }
-
 
 
 \title{Large-scale investigations of variability in children's first words}
@@ -40,13 +35,13 @@ Language acquisition, word learning, cognitive development
 %%INTRODUCTION%%%%
 \section{Introduction}
 
-A child's first word production is not only a highly anticipated and memorable event, but also a brief glimpse into the mind of an infant acquiring language, one of the most astonishing development processes. Over the course of their first years, children rapidly go from speechless infants to toddlers producing and learning language at an astounding rate \cite{fenson1994,bloom2002}. Marking the beginning of productive language, the first word is an important and measurable insight into a child's conceptual and linguistic development. Yet, in contrast to later milestones, children's first words are an intimate moment between child and caregiver, and are difficult for external observers to record or measure. Here we leverage large-scale data from parental reports to ask what children's first words reveal about two key issues in early language learning; the time-course of the emergence of language, and the relation of linguistic and conceptual development. 
+A child's first word production is not only a highly anticipated and memorable event, but also a glimpse into the mind of an infant acquiring language, an astonishing development process. In their first years, children rapidly go from speechless infants to toddlers producing language at an astounding rate \cite{fenson1994,bloom2002}. Marking the beginning of productive language, the first word is an important and measurable insight into a child's conceptual and linguistic development. Yet, in contrast to later milestones, children's first words are an intimate moment between child and caregiver, and are difficult for external observers to record or measure. Here we leverage large-scale data from parental reports to ask what children's first words reveal about two key issues in early language learning; the time-course of the emergence of language, and the relation between linguistic and conceptual development. 
 
 First, from a very early point in development, infants exhibit an aptitude for language, even showing a preference for infant-directed over adult-directed speech at 1 month \cite{cooper1990}. Over the course of the first year, infants are learning to recognize the distinctive sounds and word forms of their native language \cite{kuhl2004} and to segment these phonetic forms and words \cite{werker2005}. Additionally, by 6 -- 9 months, many infants already show a tendency to look to matching pictures when they hear common nouns, suggesting early beginnings for form-meaning mapping as well \cite{tincoff1999,tincoff2012,bergelson2012}. Infants' language comprehension abilities thus appear to be reasonably well-developed prior to 12 months. As early as 12 weeks, children begin producing the sounds of their native language in babble \cite{kuhl1996}, suggesting an early beginning to linguistic production. Conventional wisdom holds that word production typically begins around the first birthday, however. Is this early lag between comprehension and production real, or only apparent?
 
-Second, what is the relationship between the words children learn and their conceptual development? Typically-developing monolingual children show correlations between some cognitive achievements and their language production; for example, acquisition of words about disappearance is correlated with comprehension of object permanence \cite{gopnik1986}. But at a larger scale, conceptual development appears to play a more limited role: 2 -- 5-year-old international adoptees learning English for the first time show the same gross pattern of language acquisition as monolingual infants in terms of vocabulary composition \cite{snedeker2007}. Additionally, there are also striking convergences in early words across very different cultural contexts \cite{tardif2007}. Do patterns of first word productions---and their distribution across semantic categories---suggest any relationship between language acquisition and cognitive development? 
+Second, what is the relationship between the words children learn and their conceptual development? Typically-developing monolingual children show correlations between some cognitive achievements and their language production; for example, acquisition of words about disappearance is correlated with comprehension of object permanence \cite{gopnik1986}. But at a larger scale, conceptual development appears to play a more limited role: 2 -- 5-year-old international adoptees learning English for the first time show the same gross pattern of language acquisition as monolingual infants in terms of vocabulary composition \cite{snedeker2007}. There are also striking convergences in early words across very different cultural contexts \cite{tardif2007}. Do patterns of first word productions---and their distribution across semantic categories---suggest any relationship between language acquisition and cognitive development? 
 
-Because very early language is difficult to observe in the lab, we leverage parent reports to learn about children's first words. A child's first word is highly memorable for parents, and many parents record this milestone in baby books. While recognizing that parents may not share all aspects of this standard, we define a true ``first word'' as the consistent use of a form to communicate a particular meaning, whether or not that form matches the adult target. Intuitively, we believe this is what parents tend to think they are reporting when they report first words, though they may occasionally be biased to construct consistency and communicativeness out of babble and coincidence.
+Because very early language is difficult to observe in the lab, we leverage parent reports to learn about children's first words. A child's first word is highly memorable for parents, and many parents record this milestone in baby books. We define a true ``first word'' as the consistent use of a form to communicate a particular meaning, whether or not that form matches the adult target. While recognizing that parents may not share this definition, intuitively, we believe this is what parents tend to think they are reporting when they report first words. However, parents may occasionally be biased to construct consistency and communicativeness out of babble and coincidence.
 
 As a scientific measure, parent report has both substantial disadvantages and real advantages. One issue with any self-report measure is that there is no way to validate participants' responses. Another complication is that parents may be biased observers, and interpret word-like babble as productive communication. Nevertheless, parent report is widely used as a measure of early child language, e.g. in the MacArthur-Bates Communicative Development Inventory (CDI), a vocabulary checklist that is both a reliable and valid measure of early vocabulary \cite{fenson1994,fenson2007} (although the reliability of the earliest ages of the CDI has been questioned; \citeNP{feldman2000}). On the other hand, self-reports are very easy to collect, making them ideal for large-scale investigations like the present study. 
 
@@ -70,7 +65,7 @@ We sent out a very brief survey on children's first words to subscribed members 
 
 \subsubsection{Method}
 
-Parents completed a web-based survey (created with JavaScript and HTML). The survey asked parents to report their child's first word (excluding ``mama'' and ``dada''), the word referent, a description of the situation surrounding the first word, the child's age at time of utterance (10 mo. or younger, 11 mo., 12 mo., 13 mo., 14 mo.), the child's current age, and sex. Parents answered for only one child in this survey. We standardized responses and corrected obvious spelling errors; when the meaning of the word was not immediately apparent, we relied on the parent's description of the circumstances surrounding the word and/or the parent's classification of the word type.
+Parents completed a web-based survey. The survey asked parents to report their child's first word (excluding ``mama'' and ``dada''), the word referent, a description of the situation surrounding the first word, the child's age at time of utterance (10 mo. or younger, 11 mo., 12 mo., 13 mo., 14 mo.), the child's current age, and sex. Parents answered for only one child in this survey. We standardized responses and corrected obvious spelling errors; when the meaning of the word was not immediately apparent, we relied on the parent's description of the circumstances surrounding the word and/or the parent's classification of the word type.
 
 %SURVEY2
 \subsection{Dataset 2: Amazon Mechanical Turk}
@@ -81,7 +76,7 @@ We recruited 1000 parents from Amazon Mechanical Turk to complete a more in-dept
 
 \subsubsection{Method}
 
-This survey was an extended version of the Museum survey, allowing for input for multiple children, and asking the respondent to list their highest level of education, child's birth order, sex, first word (excluding ``mama'' and ``dada''), word type, addressee of the first word, age at time of the word (0 -- 24+ months), current age (0 -- 18+ years), and both home and word language.
+This survey was an extended version of the Museum survey, allowing for input for multiple children, and asking the respondent to list their highest level of education, child's birth order, sex, first word (excluding ``mama'' and ``dada''), word type, addressee of the first word, age at time of the word (0 -- 24+ months), current age (0 -- 18+ years), and both the languages of the first word and spoken at home.
 
 Data were handled as in Dataset 1. Due to the larger sample size, more phonological and morphological variations appeared. A final standardized form was selected, and the various original first word forms were recoded as that standardized form. For example, ``Dog dog,'' ``Doggy,'' ``Doggie,'' and ``Dogie'' were all coded as ``Dog.'' We occasionally relied on the parent's description of the situation in this coding process.
 
@@ -134,13 +129,15 @@ Up, More & Milk &  & \textbf{Ball} \\
 \hline 
 \end{tabular}
 \caption{\label{tab:top10} Top ten first words (excluding ``mama'' and ``dada'') from each of the four datasets we examined. Words repeated across datasets are bolded. Included are only words with more than 1 instance.}
+\vspace{-2em}
 \end{table}
+
 
 Table \ref{tab:top10} shows the top ten words from each dataset. Overall, there is substantial consistency across the four datasets, with ``Hi'' appearing in all four, and ``Bye'', ``Ball'', ``Dog''/``Woof Woof'', and ``Cat'' appearing in three. 
 
-Although we do not include an item analysis of individual words, it is worth noting that the word "No" was a frequent first word utterance, particularly in the MTurk dataset. The concept of negation is developmentally very interesting, and various functions of negation (denial, refusal, nonexistence) emerge at different points in a child's development \cite{pea1982}. In the MTurk dataset, we coded instances of ``No'' based on parent descriptions of the situation surrounding the first word. Of 108 children producing ``No'' as a first word, 40\% did so as a refusal; there were no instances of ``No'' being used as denial, which is conceptually acquired later \cite{pea1982}. 
-
 We use these four datasets to conduct three primary analyses. Analysis 1 examines the age of first production, Analysis 2 describes the semantic categories of these words, and Analysis 3 attempts to predict which words tend to be produced on the basis of phonological complexity and input frequency.
+
+Although we do not include an item analysis of individual words, it is worth noting that the word "No" was a frequent first word utterance, particularly in the MTurk dataset. The concept of negation is developmentally very interesting, and various functions of negation (denial, refusal, nonexistence) emerge at different points in a child's development \cite{pea1982}. In the MTurk dataset, we coded instances of ``No'' based on parent descriptions of the situation surrounding the first word. Of 108 children producing ``No'' as a first word, 40\% did so as a refusal; there were no instances of ``No'' being used as denial, which is conceptually acquired later \cite{pea1982}. Thus, these datasets may also be useful for examining the acquisition of individual words in addition to broader patterns in relation to conceptual development.
 
 \subsection{Analysis 1: Age of First Word} 
 
@@ -161,12 +158,13 @@ In sum, we see some evidence for over-optimism (estimating first words earlier t
 \begin{figure}[tb]
 \center{\includegraphics[width=.9\linewidth]{figures/agedata_4sets.pdf}}
 \caption{\label{fig:cdfs} Cumulative probability of a child having produced her first word across development. In all datasets, more than 75\% percent of children had produced their first word by their first birthday and more than half had produced their first word by 10 months. Shaded regions show 95\% confidence intervals computed by non-parametric bootstrap.}
+\vspace{-2em}
 \end{figure}
 
 
 \subsection{Analysis 2: Independence of Age and First Word}
 
-The variability in children's age of first production gives us a natural tool for asking about the relationship between conceptual and linguistic development. All things being equal between samples---which they are almost certainly not, since younger language producers might be more sophisticated conceptually as well---younger children should be less conceptually sophisticated and hence might produce words for a more restricted range of concepts. Alternatively, if the concepts that children most want to talk about are present early \cite{snedeker2007,snedeker2012,gleitman1990}, we should predict no difference in the distribution of first words for older and younger children. 
+The variability in children's age of first production gives us a natural tool for asking about the relationship between conceptual and linguistic development. All things being equal between age groups---which they are almost certainly not, since younger language producers might be more sophisticated conceptually as well---younger children should be less conceptually sophisticated and hence might produce words for a more restricted range of concepts. Alternatively, if the concepts that children most want to talk about are present early \cite{snedeker2007,snedeker2012,gleitman1990}, we should predict no difference in the distribution of first words for older and younger children. 
 
 In our next analyses, we ask whether older children vary more in their first productions at two levels of granularity: individual words, and the semantic categories these words come from.  To avoid issues of data sparsity across word forms, we assigned words to the categories that appear on the CDI instrument (e.g., Animals, Games and Routines, Toys, People, etc.) and conducted our analysis over the category distribution of words (a loose proxy for their semantic distribution). We assigned CDI categories consistently across datasets for words that did not appear on the CDI word list. Ninety-one children were excluded because their first word could not be categorized. 
 
@@ -177,6 +175,7 @@ In our next analyses, we ask whether older children vary more in their first pro
 \end{center}
 \caption{Proportion of children's first words falling into each CDI category. The datasets showed a high degree of consistency, with most first words referring to animals or games and routines. These distributions were highly consistent between older and younger children, suggesting that first words are driven by linguistic rather than conceptual factors.}
 \label{fig:cdi_cats}
+\vspace{-1em}
 \end{figure*}
 
 Figure~\ref{fig:cdi_cats} shows the frequencies of the CDI categories split by age (at the first birthday) and grouped by dataset. Animals, Games and Routines, Toys, and People, followed closely by Food and Drink, were frequent first word categories. All of these seemed to be equally compelling as a first word for both early and later producers. Data for later speakers in Wordbank was sparse, because children were selected for this analysis when they were producing exactly one word, according to parental report on the CDI. Only 27 children produced only exactly word in this group.
@@ -199,7 +198,7 @@ Data Set & CDI Category & First Word \\
 
 To quantify the differences in variability across age, we asked whether the entropy of children's word or category distributions were different for our older and younger children \cite{shannon1948}. Because entropy is sensitive to sample size, for each dataset we split children into older and younger, and then down-sampled the larger group to the size of the smaller one. We then computed the difference in entropy for children in the older group as compared to the younger group at both the word and category level. For each dataset and measure, we used used non-parametric bootstrap resampling to identify whether the observed difference was significant at the $p = .05$ level. For all datasets and measures, the 95\% confidence interval for entropy differences included 0, indicate no significant difference in entropy across ages (Table~\ref{tab:ent_diffs}).
 
-In sum, despite producing a first word during different points in their conceptual development, both early and later producers in our sample chose to talk about the same semantic categories, and in many cases, the same things. This finding suggests that first words tend to reflect concepts that are available early (at least to those children who have the wherewithal to talk about them). Why then do children consistently pick certain words? In the next analysis, we examine the role of input frequency and phonological complexity in determining which words are predicted. 
+In sum, despite producing a first word during different points in their conceptual development, both early and later producers in our sample chose to talk about the same semantic categories, and in many cases, the same things (see Table \ref{tab:top10}). This finding suggests that first words tend to reflect concepts that are available early (at least to those children who have the wherewithal to talk about them). Why then do children consistently pick certain words? In the next analysis, we examine the role of input frequency and phonological complexity in determining which words are predicted. 
 
 \subsection{Analysis 3: Predicting First Words}
 
@@ -222,6 +221,7 @@ Across datasets, input frequency and phonetic complexity consistently predicted 
 \begin{figure}[tb]
 \center{\includegraphics[width=.9\linewidth]{figures/hurdle_params.pdf}}
 \caption{\label{fig:hurdles} Parameter estimates for hurdle models predicting children's first words. Models showed a high degree of consistency across datasets: first words tend to be higher frequency and have fewer phonemes. Intercepts are omitted for clarity.}
+\vspace{-1.5em}
 \end{figure}
 
 \section{General Discussion}
