some minor tinkering

--- a/paper/firstwords.tex
+++ b/paper/firstwords.tex
@@ -31,7 +31,7 @@
 
 %ABSTRACT
 \begin{abstract}
-A child's first word is a highly salient moment in the developmental trajectory of language acquisition. It's memorability to caregivers also makes it powerful parent-report measure for understanding the interaction between early cognitive and linguistic development. We investigated both the variability and predictability in children's first words across four large new datasets. We find, first, that children's first tend to be earlier than previously estimated: more than 75 percent of children produce their first word before their first birthday. Second, we find a high degree of consistency in the referents of children's first words independent of children's age of first production. Finally, we show that these words are are predictable from two linguistic factors: input frequency and phonological complexity. Together, our results suggest a degree of independence between early conceptual and linguistic development.
+A child's first word is a highly salient moment in the developmental trajectory of language acquisition. It's memorability to caregivers also makes it powerful parent-report measure for understanding the interaction between early cognitive and linguistic development. We investigated both the variability and predictability in children's first words across four large new datasets. We find, first, that children's first words tend to be earlier than previously estimated: more than 75 percent of children produce their first word before their first birthday. Second, we find a high degree of consistency in the referents of children's first words independent of children's age of first production. Finally, we show that these words are are predictable from two linguistic factors: input frequency and phonological complexity. Together, our results suggest a degree of independence between early conceptual and linguistic development.
 
 \textbf{Keywords:}
 Language acquisition, word learning, cognitive development
@@ -40,11 +40,11 @@ Language acquisition, word learning, cognitive development
 %%INTRODUCTION%%%%
 \section{Introduction}
 
-A child's first word production is not only a highly anticipated and memorable event, but also a brief glimpse into the mind of an infant acquiring language, one of the most astonishing development processes. Over the course of their first years, children rapidly go from speechless infants to toddlers producing and learning language at an astounding rate \cite{fenson1994,bloom2002}. Marking the beginning of productive language, the first word is an important and measurable insight into a child's conceptual and linguistic development. Yet, in contrast to later milestones, children's first words are an intimate moment between child and caregiver, and are difficult for external observers to record or measure. Here we leverage large-scale data from parental reports to ask what children's first words reveal about two key issues in early language learning; the time-course of the emergence of language, and the relation of linguistic and conceptual development. 
+Infancy is a period of rapid development across diverse cognitive domains. These years are rife with milestones eagerly awaited and recorded by parents: the child's first smile, first step, first word. Because they mark moments of transition, these milestones are a powerful tool for investigating early development. However, while milestones like a child's first word are salient and memorable to caregivers, they are largely inaccessible in laboratory studies. We leverage large-scale data from parental reports to investigate both the variability and consistency in children's first productions, addressing two key issues in language learning: the time-course of the emergence of language, and the relation of linguistic and conceptual development. 
 
-First, from a very early point in development, infants exhibit an aptitude for language, even showing a preference for infant-directed over adult-directed speech at 1 month \cite{cooper1990}. Over the course of the first year, infants are learning to recognize the distinctive sounds and word forms of their native language \cite{kuhl2004} and to segment these phonetic forms and words \cite{werker2005}. Additionally, by 6 -- 9 months, many infants already show a tendency to look to matching pictures when they hear common nouns, suggesting early beginnings for form-meaning mapping as well \cite{tincoff1999,tincoff2012,bergelson2012}. Infants' language comprehension abilities thus appear to be reasonably well-developed prior to 12 months. As early as 12 weeks, children begin producing the sounds of their native language in babble \cite{kuhl1996}, suggesting an early beginning to linguistic production. Conventional wisdom holds that word production typically begins around the first birthday, however. Is this early lag between comprehension and production real, or only apparent?
+Infants begin to show an aptitude for language from a very early point in. For instance, 1-month-old infants already prefer to listen to child-directed speech over adult-directed speech \cite{cooper1990}. Over the course of the first year, infants are learning to recognize the distinctive sounds and word forms of their native language \cite{kuhl2004} and to segment these phonetic forms and words \cite{werker2005}. Additionally, by 6--9 months, many infants already show a tendency to look to matching pictures when they hear common nouns, suggesting early beginnings for form-meaning mapping as well \cite{tincoff1999,tincoff2012,bergelson2012}. Infants' language comprehension abilities thus appear to be reasonably well-developed prior to 12 months. As early as 12 weeks, children begin producing the sounds of their native language in babble \cite{kuhl1996}, suggesting an early beginning to linguistic production. However, developmental norms suggest that the typical child will produce their first word at 12 months. Conventional wisdom holds that word production typically begins around the first birthday, however. Is this early lag between comprehension and production real, or only apparent?
 
-Second, what is the relationship between the words children learn and their conceptual development? Typically-developing monolingual children show correlations between some cognitive achievements and their language production; for example, acquisition of words about disappearance is correlated with comprehension of object permanence \cite{gopnik1986}. But at a larger scale, conceptual development appears to play a more limited role: 2 -- 5-year-old international adoptees learning English for the first time show the same gross pattern of language acquisition as monolingual infants in terms of vocabulary composition \cite{snedeker2007}. Additionally, there are also striking convergences in early words across very different cultural contexts \cite{tardif2007}. Do patterns of first word productions---and their distribution across semantic categories---suggest any relationship between language acquisition and cognitive development? 
+Second, what is the relationship between the words children learn and their conceptual development? Typically-developing monolingual children show correlations between some cognitive achievements and their language production; for example, acquisition of words about disappearance is correlated with comprehension of object permanence \cite{gopnik1986}. But at a larger scale, conceptual development appears to play a more limited role: 2--5-year-old international adoptees learning English for the first time show the same gross pattern of language acquisition as monolingual infants in terms of vocabulary composition \cite{snedeker2007}. Additionally, there are also striking convergences in early words across very different cultural contexts \cite{tardif2007}. Do patterns of first word productions---and their distribution across semantic categories---suggest any relationship between language acquisition and cognitive development? 
 
 Because very early language is difficult to observe in the lab, we leverage parent reports to learn about children's first words. A child's first word is highly memorable for parents, and many parents record this milestone in baby books. While recognizing that parents may not share all aspects of this standard, we define a true ``first word'' as the consistent use of a form to communicate a particular meaning, whether or not that form matches the adult target. Intuitively, we believe this is what parents tend to think they are reporting when they report first words, though they may occasionally be biased to construct consistency and communicativeness out of babble and coincidence.
 
